baseresources/sedrila.css
/* ... */
#timer .stop::before {
    content: "⏹";
}


/********** misc: */

.breadcrumbs {}


/********** Modifications for dark mode: */

@media (prefers-color-scheme: dark) {
    :root {
        --background-color: #1f1f1f;
        --on-background-color: #cacaca;
        --background-dim-color: #2c2c2c;
        --on-background-dim-color: #cacaca;

        --on-main-color: black;
        color-scheme: dark;
    }

    body,
    pre {
        background-color: var(--background-color);
        color: var(--on-background-color);
    }

    #preheader {
        background-color: var(--background-color);
    }

    .main {
        background-color: var(--background-color);
    }

    main {
        background-color: var(--background-color);
    }

    a,
    a:link {
        color: var(--main-color);
        filter: unset;

        &:hover {
            color: #cfe882;
            text-decoration: none;
        }
    }

    .header_in a {
        color: var(--on-main-color);
    }

    .header_in a:hover {
        text-decoration: none;
        color: var(--on-main-color);
    }

    nav#sidebar {
        background-color: #262626;
        color: var(--on-background-color);
    }

    nav#sidebar div:hover {
        background-color: var(--background-dim-color);
    }

    main .section {
        --section-color: var(--level-color);
        padding: 8px 12px;
        border: none;
        box-shadow: none;
        border-left: 4px solid var(--section-color);
        border-radius: 0;
    }

    .section.section-background {
        background-color: var(--background-color);
        --section-color: gray;
    }

    .section.section-goal {
        background-color: var(--background-color);
        margin: 0;
        --section-color: #e5c914;
    }

    .section.section-instructions {
        --section-color: var(--instructions-border-color);
    }

    .section.section-submission {
        --section-color: #b89eff;
        background-color: var(--background-color);
    }

    span.enumeration-er,
    span.enumeration-ec,
    span.enumeration-eq,
    span.enumeration-erefc,
    span.enumeration-erefq,
    span.enumeration-erefc {
        color: #B89EFF;
    }

    span.assumes-decoration,
    span.requires-decoration {
        color: var(--on-background-color);
    }

    code,
    div.codehilite,
    div.codehilite pre {
        background-color: #161616;
    }

    .codehilitetable .linenos .normal:only-child {
        display: none;
    }

    .blockmacro {
        border: 1px solid rgb(var(--notice-color));
        border-radius: .5em;
        background-color: transparent;
        padding: 0;
        margin: 16px 0;
        box-shadow: none;

        &>strong {
            display: flex;
            align-items: center;
            gap: 0.3em;
            background-color: rgba(var(--notice-color), 0.15);
            padding: 8px 14px;
        }

        & summary {
            cursor: pointer;
            background-color: rgba(var(--notice-color), 0.15);
            padding: 8px 14px;

            &:hover {
                background-color: rgba(var(--notice-color), 0.25);
            }
        }

        & p {
            padding: 0.4em 0.9em;
        }

        &.blockmacro-foldout,
        &.blockmacro-notice {
            --notice-color: 68, 138, 255;
        }

        &.blockmacro-warning {
            --notice-color: 255, 68, 68;
        }

        &.blockmacro-hint {
            --notice-color: 0, 191, 165;
        }
        &.blockmacro-instructor {
            --notice-color: 255, 153, 0;
            background-color: #f903;
            padding: 0.4em 0.9em;
            margin: 0.4em 0 0.8em 0;
        }
    }

    .stage-draft {
        background-color: #555;
    }

    .stage-alpha {
        background-color: #333;
    }

    .treeref {
        background-color: #161616;
    }

    input[type=text] {
        background-color: #000;
        color: lightgray;
        border: 1px solid;
    }

    .vwr-promptidx {
        color: #000000;
    }

    .vwr-userhost {
        color: #ff3d50;
    }

    .vwr-dir {
        color: #36e35e;
    }

    .vwr-time {
        color: #00a2ff;
    }

    .vwr-num {
        background-color: #00a2ff;
        color: black;
    }

    .vwr-cmd {
        color: white;
    }

    .vwr-output {
        color: #ffcccc;
    }

    .prot-counter {
        color: black !important;
    }

    .prot-counter.prot-alert-color {
        color: white !important;
    }

    .prot-spec-manual,
    .prot-spec-extra {
        color: black !important;
    }

    .prot-spec-manual p,
    .prot-spec-extra p {
        color: black !important;
    }
}

